Added tests, specify return types
- Got some more time so briefly added tests to a controller and service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
     container_name: "api"
     build:
       context: ./api
-      target: prod
+      target: dev
     env_file:
       - ./api/.env
     networks:
